# WireSentinel-Ndis

./: Cargo.toml  README.md
.github/workflows/: ci.yml
controller/: Cargo.toml
controller/src/: client_impl.rs  device_impl.rs  ioctl.rs  lib.rs  security.rs  stub.rs  types.rs
docs/: architecture.md
ndis-filter/: README.md  filter.c  filter.h  guardian_lwf.inf  guardian_lwf.vcxproj  ioctl.c  ioctl.h
ndis-filter/classify/: classify.c  classify.h
ndis-filter/redirect/: redirect.c  redirect.h
ndis-filter/telemetry/: telemetry.c  telemetry.h
ndis-filter/transform/: transform.c  transform.h
obfuscation/: Cargo.toml
obfuscation/src/: cover.rs  lib.rs  lwo.rs  transform.rs
packet-engine/: Cargo.toml
packet-engine/src/: classifier.rs  flow.rs  lib.rs  packet.rs
route-engine/: Cargo.toml
route-engine/src/: assignment.rs  lib.rs  sync.rs
scripts/: run-tests.ps1
sdk/: Cargo.toml
sdk/src/: agent.rs  lib.rs
shared/: ndis_ioctl.h  ndis_public.h  ndis_types.h
shared/structures/: cover_traffic.h  redirect.h  route_assignment_v2.h  telemetry_v2.h  transform_profile.h
telemetry/: Cargo.toml
telemetry/src/: lib.rs  ring.rs  summary.rs
