[workspace]
resolver = "2"
members = [
    "packet-engine",
    "route-engine",
    "obfuscation",
    "telemetry",
    "controller",
    "sdk",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"

[workspace.dependencies]
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_IO",
    "Win32_Security",
] }
